--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "pwa-quotes-app",
   "version": "1.0.0",
   "description": "Stress relief quotes app is een app waar je citaten van verschillende beromende mensen in het wereld van de web.",
-  "main": "index.js",
+  "main": "app.js",
   "directories": {
     "doc": "docs",
     "example": "examples"
   },
   "scripts": {
-    "test": "npm start"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/K3A101/PWA-quotes-app/issues"
   },
-  "homepage": "https://github.com/K3A101/PWA-quotes-app#readme"
+  "homepage": "https://github.com/K3A101/PWA-quotes-app#readme",
+  "dependencies": {
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.21"
+  }
 }
