--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "keywords": [
     "quotes"
   ],
-  "author": "Keisha Alexander",
+  "author": "Keïsha Alexander",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/K3A101/PWA-quotes-app/issues"
@@ -25,7 +25,6 @@
   "homepage": "https://github.com/K3A101/PWA-quotes-app#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "nodemon": "^2.0.21"
