--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "sass": "^1.59.3"
   }
 }
