--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uglify-js": "^3.17.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.21",
