--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
   "homepage": "https://github.com/K3A101/PWA-quotes-app#readme",
   "dependencies": {
     "axios": "^1.3.4",
-    "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "request": "^2.88.2",
-    "uglify-js": "^3.17.4"
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.21",
-    "sass": "^1.59.3"
+    "sass": "^1.59.3",
+    "uglify-js": "^3.17.4",
+    "webpack": "^5.76.3",
+    "webpack-cli": "^5.0.1"
   }
 }
