--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "nodemon app.js",
     "minify:server": "uglifyjs app.js -c -m -o app.min.js",
     "minify:routerFolder": "uglifyjs-folder ./routes -eo ./routes-output",
-    "minify:js:client": "uglifyjs-folder ./public/script -eo ./public/script-output"
+    "minify:routerOne": "uglifyjs-folder ./routes -o ./routes-output/routes.min.js",
+    "minify:js": "uglifyjs-folder ./public/script -e ./public/script-output/clientside.min.js"
 
   },
   "repository": {
