--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,10 +9,30 @@
     "orientation":"portrait-primary",
     "icons": [
         {
-            "src":"/images/icons/icons-512x512.png",
+            "src":"/images/icons/icon-192x192.png",
             "type":"image/png",
-            "sizes:":"512x512"
-        }
+            "sizes:":"192x192"
+        },
+
+    {
+        "src": "/images/icons/icon-256x256.png",
+        "type": "image/png",
+        "sizes:": "256x256"
+    },
+
+    {
+        "src": "/images/icons/icon-384x384.png",
+        "type": "image/png",
+        "sizes:": "384x384"
+    },
+
+    {
+    "src": "images/icons/icon-512x512.png",
+    "sizes": "512x512",
+    "type": "image/png"
+    }
+
+
     ],
     "description":"An app with a list of quotes"
 }
